[package]
name = "bcv"
version = "0.1.0"
edition = "2021"
authors = ["Sebastián Mata <sebasmata41@outlook.com>"]
license = "MIT"
description = "A Command line tool to fetch the BCV exchange rates for the Bolivar"
readme = "README.md"
repository = "https://github.com/S14vcGt/bcv_scraper"
keywords = ["cli", "BCV", "tasa", "cambio", "Venezuela"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = {version = "0.12.14", features = ["blocking", "native-tls-vendored"]}
scraper = "0.23"