[package]
name = "bcv"
version = "0.1.4"
edition = "2021"
authors = ["Sebastián Mata <sebasmata41@outlook.com>"]
license = "MIT"
description = "A Command line tool to fetch the BCV exchange rates for the Bolivar"
readme = "README.md"
repository = "https://github.com/S14vcGt/bcv_scraper"
keywords = ["cli", "BCV", "tasa", "cambio", "Venezuela"]
categories = ["command-line-utilities"]

[dependencies]
clap = {version="4.5.40", features = ['derive']}
reqwest = {version = "0.12.14", features = ["blocking", "rustls-tls"]}
scraper = "0.23"
